@@ -7,6 +7,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -16,8 +17,8 @@ public class CorsConfig {
         corsConfiguration.setAllowedOrigins(Arrays.asList("https://fitting-pair.vercel.app","https://localhost:5173"));
         corsConfiguration.setAllowedMethods(Arrays.asList("GET","POST","OPTIONS","DELETE","PUT"));
         corsConfiguration.setAllowCredentials(true);
-        corsConfiguration.setAllowedHeaders(Arrays.asList("Authorization", "Refresh", "Content-Type"));
-        corsConfiguration.setExposedHeaders(Arrays.asList("Authorization", "Refresh"));
+        corsConfiguration.setAllowedHeaders(List.of("*"));
+        corsConfiguration.setMaxAge(3600L);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**",corsConfiguration);
         return source;
